--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,9 +1,5 @@
 @media (max-width: 768px) {
 
-  .container{
-    width: 100%;
-  }
-      
 
 
    .card-m{
@@ -20,6 +16,7 @@
         grid-template-columns: 1fr;
        
 }
+
 
 
 }
